feat: add bootstrap

--- a/app/views/fields/edit.html.erb
+++ b/app/views/fields/edit.html.erb
@@ -3,8 +3,10 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" />
 	<style>
 		#map {
-			height: 400px;
-			width: 100%;
+			height: 600px;
+			width: 80%;
+			margin: 0 auto; /* Centers the element horizontally */
+			display: block; /* Ensures the div behaves as a block-level element */
 		}
 	</style>
 <% end  %>
