feat: update js for edit field page

--- a/app/views/fields/edit.html.erb
+++ b/app/views/fields/edit.html.erb
@@ -11,6 +11,8 @@
 	</style>
 <% end  %>
 
-<h1><%= t '.edit' %></h1>
+<div class="container edit-field">
+	<h1><%= t '.edit' %></h1>
 
-<%= render 'form', field: @field %>
+	<%= render 'form', field: @field %>
+</div>
