feat: update edit field and new field pages

--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -1,13 +1,30 @@
 <p><%= RGeo::GeoJSON.encode(field.shape).to_json  %></p>
 <%= form_for field do |f| %>
-	<%= f.label :name %>
-	<%= f.text_field :name %>
+  <div class="form-group">
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+  </div>
+
+	
+	<% if @field.persisted?  %>
+		<div class="form-group">
+			<%= f.label :area %>
+				<%= f.text_field :name, disabled: true, class: 'form-control' %>
+		</div>
+	<% end %>
 
 	<%= f.hidden_field :shape, id: 'shape-field', value: RGeo::GeoJSON.encode(field.shape).to_json %>
 
-	<%= f.submit 'Save' %>
+	<%= f.submit 'Save', class: 'btn btn-success' %>
 <% end %>
-    <p class="shape-cors" style="display: none;">
-      <%= raw RGeo::GeoJSON.encode(field.shape).to_json %>
-    </p>
-<%= render 'map' %>
+
+<p class="shape-cors" style="display: none;">
+  <%= raw RGeo::GeoJSON.encode(field.shape).to_json %>
+</p>
+
+<div id="map"></div>
+
+
+
+
+
