--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -9,7 +9,7 @@
 	<% if @field.persisted?  %>
 		<div class="form-group">
 			<%= f.label :area %>
-				<%= f.text_field :name, disabled: true, class: 'form-control' %>
+				<%= f.number_field :area, disabled: true, class: 'form-control' %>
 		</div>
 	<% end %>
 
