--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <%= link_to 'Fields Management System', root_url, class: 'navbar-brand', onclick: 'window.location.reload();' %>
+    <%= link_to 'Fields Management System', root_url, class: 'navbar-brand', data: { turbo: false } %>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,7 +7,7 @@
     <div class="navbar-collapse collapse" id="navbarColor01" style="">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <%= link_to t('.new_field'), new_field_path, class: 'nav-link' %>
+          <%= link_to t('.new_field'), new_field_path, class: 'nav-link', data: { turbo: false } %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
