--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -1,8 +1,7 @@
-<p><%= RGeo::GeoJSON.encode(field.shape).to_json  %></p>
-<%= form_for field do |f| %>
+<%= form_for field, html: { data: { turbo: 'false' } } do |f| %>
   <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name, class: 'form-control' %>
+    <%= f.text_field :name, class: 'form-control', required: true %>
   </div>
 
 	
@@ -17,10 +16,6 @@
 
 	<%= f.submit 'Save', class: 'btn btn-success' %>
 <% end %>
-
-<p class="shape-cors" style="display: none;">
-  <%= raw RGeo::GeoJSON.encode(field.shape).to_json %>
-</p>
 
 <div id="map"></div>
 
