--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,11 @@
 
   <body>
     <%= render 'layouts/navbar' %>
+    <% flash.each do |key, message| %>
+      <div class="<%= flash_class(key) %> fade show" role="alert">
+        <%= message %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
