--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,9 +19,9 @@
           <a class="nav-link" href="#">About</a>
         </li>
       </ul>
-      <form class="form-inline">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <%= form_with url: fields_path, method: :get, class: "form-inline", local: true, data: { turbo: false } do %>
+        <%= text_field_tag 'q[name_cont]', params.dig(:q, :name_cont), placeholder: "Search by Name", class: "form-control mr-sm-2", aria: { label: "Search" } %>
+        <%= submit_tag "Search", class: "btn btn-outline-info my-2 my-sm-0" %>
+      <% end %>
     </div>
   </nav>
