--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -40,3 +40,7 @@
 			<% end %>
     </tbody>
 </table>
+
+<nav data-turbo="false">
+  <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<nav data-turbo="false">
