feat: make pagy optionable

--- a/app/views/fields/edit.html.erb
+++ b/app/views/fields/edit.html.erb
@@ -16,8 +16,8 @@
 		#map {
 			height: 400px;
 			width: 80%;
-			margin: 0 auto; /* Centers the element horizontally */
-			display: block; /* Ensures the div behaves as a block-level element */
+			margin: 0 auto;
+			display: block;
 		}
 	</style>
 <% end  %>
