--- a/app/views/fields/new.html.erb
+++ b/app/views/fields/new.html.erb
@@ -23,7 +23,7 @@
 <% end  %>
 
 <div class="container edit-field">
-	<h1><%= t '.new' %></h1>
+	<h1><%= t '.new_field' %></h1>
 
 	<%= render 'form', field: @field %>
 </div>
