fix: fix index map

--- a/app/views/fields/index.html.erb
+++ b/app/views/fields/index.html.erb
@@ -9,7 +9,7 @@
 	</style>
 <% end  %>
 
-<div id="map"></div>
+<div id="map" class="index-map"></div>
 
 <div class="show-options">
   <%= link_to t('.show_as_list'), fields_path(disable_pagy: true), data: { turbo: false } %> |
