--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -8,7 +8,7 @@
 	<% if @field.persisted?  %>
 		<div class="form-group">
 			<%= f.label :area %>
-				<%= f.number_field :area, disabled: true, class: 'form-control' %>
+				<%= f.number_field :area, value: f.object.area.round(2), disabled: true, class: 'form-control' %>
 		</div>
 	<% end %>
 
