fix: refactoring, update css

--- a/app/views/fields/_form.html.erb
+++ b/app/views/fields/_form.html.erb
@@ -17,7 +17,7 @@
 	<%= f.submit t('.save'), class: 'btn btn-success' %>
 <% end %>
 
-<div id="map"></div>
+<div id="map" class="edit-map"></div>
 
 
 
